--- a/html-e-css/index.html
+++ b/html-e-css/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     
     <title>Documento de Teste</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
     <header>
